--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A simple website for managing IT Stocks for a company">
+    <meta name="keywords" content="IT, IT Stock, Managemment, IT Stock managenement">
+    <meta name="author" content="Dharmesh Kumar Sookun">
+    <meta property="og:title" content="IT Stock Management App">
+    <meta property="og:description" content="A simple website for managing IT Stocks for a company">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT Stock Management App" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:title" content="IT Stock Management">
+    <meta name="twitter:description" content="A simple website for managing IT Stocks for a company">
     <link rel="stylesheet" href="css/style.css">
-    <title>HTML CSS JS Project</title>
+    <title>IT Stock Management App</title>
 </head>
 <body>
     <header class="header">
